# adventofcode

./: .gitignore  Cargo.toml  LICENSE  README.md
2015/: Cargo.toml
2015/src/: day01.rs  day03.rs  day06.rs  day13.rs  day18.rs  lib.rs
2016/: Cargo.toml
2016/src/: day01.rs  day03.rs  day04.rs  day05.rs  day08.rs  day10.rs  day11.rs  lib.rs
2017/: Cargo.toml
2017/src/: day01.rs  day02.rs
go/202001/: .editorconfig  code.go  code_test.go  report_repair.go  report_repair_test.go
go/202002/: code.go  code_test.go
go/202003/: code_test.go  toboggan_trajectory.go  toboggan_trajectory_test.go
go/202004/: code.go  code_test.go  passport_processing.go  passport_processing_test.go
go/202005/: binary_boarding.go  binary_boarding_test.go  code.go
go/202006/: code.go  code_test.go
go/202007/: code.go  code_test.go
go/202008/: code.go  code_test.go
go/202009/: code.go  code_test.go
go/202010/: code.go  code_test.go
go/202011/: code.go  code_test.go  go.mod
input/2017/: day01_base.txt
kotlin/2018/: build.gradle  settings.gradle
kotlin/2022/: README.md  pom.xml  (+1 more)
notes/: day07_operation_tree.uxf
src/: day01.rs  day01_2016.rs  day02.rs  day02_2016.rs  day03.rs  day03_2016.rs  day04.rs  day04_2016.rs  day05.rs  day05_2016.rs  day06.rs  day06_2016.rs  day07.rs  day07_2016.rs  day08.rs  day08_2016.rs  day09.rs  day09_2016.rs  day1.rs  day10.rs  day10_2016.rs  day11.rs  day11_2016.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day5part2.java  day6a.rs  day6b.rs  lib.rs  main.rs
(+73 files in other folders)
