[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Nathan Jent <nathanjent@gmail.com>"]

[dependencies]

adventofcode-rust-2015 = { version = "0.1.0", path = "2015" }
adventofcode-rust-2016 = { version = "0.1.0", path = "2016" }
adventofcode-rust-2017 = { version = "0.1.0", path = "2017" }

[workspace]
members = ["2015","2016","2017"]
